[gd_scene load_steps=13 format=2]

[ext_resource path="res://Recursos/Fuentes/Kenney Pixel Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Recursos/Imágenes/green_button02.png" type="Texture" id=2]
[ext_resource path="res://Escenas/Parallax_Bg_Menu_Inicio.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Control_Menu_Ini.gd" type="Script" id=4]
[ext_resource path="res://Recursos/Imágenes/blue_button02.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Imágenes/Multiworld naranjita-02.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 190, 49 )
expand_margin_top = 5.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 190, 49 )
expand_margin_top = 5.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 190, 49 )
expand_margin_top = 5.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menu_Principal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
script = ExtResource( 4 )

[node name="VBoxBotones" type="VBoxContainer" parent="."]
anchor_left = 0.375
anchor_top = 0.375
anchor_right = 0.609
anchor_bottom = 0.764
margin_left = -0.250061
margin_top = 69.0
margin_right = 0.105957
margin_bottom = 104.248
custom_constants/separation = 50

[node name="Btn_Jugar" type="Button" parent="VBoxBotones"]
margin_right = 320.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "Jugar"

[node name="Btn_Puntaje" type="Button" parent="VBoxBotones"]
margin_top = 96.0
margin_right = 320.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
text = "Puntaje"

[node name="Btn_Ajustes" type="Button" parent="VBoxBotones"]
margin_top = 192.0
margin_right = 320.0
margin_bottom = 238.0
rect_pivot_offset = Vector2( -608.75, -312 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
text = "Ajustes"

[node name="Btn_Salir" type="Button" parent="VBoxBotones"]
margin_top = 288.0
margin_right = 320.0
margin_bottom = 334.0
rect_pivot_offset = Vector2( -608.75, -312 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
text = "Salir"

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="MultiworldNaranjita-02" type="Sprite" parent="."]
position = Vector2( 672, 168 )
scale = Vector2( 0.327595, 0.327595 )
texture = ExtResource( 6 )

[connection signal="pressed" from="VBoxBotones/Btn_Jugar" to="." method="_on_Btn_Jugar_pressed"]
[connection signal="pressed" from="VBoxBotones/Btn_Puntaje" to="." method="_on_Btn_Puntaje_pressed"]
[connection signal="pressed" from="VBoxBotones/Btn_Ajustes" to="." method="_on_Btn_Ajustes_pressed"]
[connection signal="pressed" from="VBoxBotones/Btn_Salir" to="." method="_on_Btn_Salir_pressed"]
